--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "bundle": "jspm bundle js/**/* - [js/**/*] dependency-bundle.js",
     "build": "webpack --colors --progress",
     "gulp": "gulp",
-    "start" : "http-server -p8080"
+    "start": "http-server -p8080"
   },
   "author": "ZhnZhn",
   "license": "MIT",
@@ -18,9 +18,9 @@
   },
   "jspm": {
     "dependencies": {
+      "chart.js": "npm:chart.js@^2.2.2",
       "interact.js": "npm:interact.js@^1.2.6",
       "localforage": "npm:localforage@^1.4.2",
-      "purify": "github:cure53/DOMPurify@^0.8.2",
       "react": "npm:react@^15.3.1",
       "react-dom": "npm:react-dom@^15.3.1",
       "reflux": "npm:reflux@^0.4.1"
@@ -30,6 +30,7 @@
   "devDependencies": {
     "babel-core": "^6.10.4",
     "babel-eslint": "^6.1.0",
+    "babel-plugin-recharts": "^1.0.2",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-2": "^6.11.0",
