--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
       "localforage": "npm:localforage@^1.4.2",
       "react": "npm:react@^15.3.1",
       "react-dom": "npm:react-dom@^15.3.1",
-      "reflux": "npm:reflux@^0.4.1"
+      "reflux": "npm:reflux@^0.4.1",
+      "timeago.js": "npm:timeago.js@^1.1.0"
     },
     "devDependencies": {}
   },
