--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
       "chart.js": "npm:chart.js@^2.2.2",
       "interact.js": "npm:interact.js@^1.2.6",
       "localforage": "npm:localforage@^1.4.2",
+      "raven-js": "npm:raven-js@^3.7.0",
       "react": "npm:react@^15.3.1",
       "react-dom": "npm:react-dom@^15.3.1",
       "reflux": "npm:reflux@^0.4.1",
