--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Library Watch is a RESTFul client. With it you can view information about libraries, repositories from GitHub, NPM api services.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "ava test/**/*.test.js --verbose",
+    "test:watch": "npm run test -- --watch",
     "bundle": "jspm bundle js/**/* - [js/**/*] dependency-bundle.js",
     "build": "webpack --colors --progress",
     "gulp": "gulp",
@@ -30,12 +31,14 @@
     "devDependencies": {}
   },
   "devDependencies": {
+    "ava": "^0.16.0",
     "babel-core": "^6.10.4",
     "babel-eslint": "^6.1.0",
     "babel-plugin-recharts": "^1.0.2",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-2": "^6.11.0",
+    "enzyme": "^2.4.1",
     "eslint": "^2.13.1",
     "eslint-plugin-react": "^5.2.2",
     "gulp": "^3.9.1",
@@ -43,6 +46,26 @@
     "gulp-concat": "^2.6.0",
     "html-webpack-plugin": "^2.21.0",
     "jspm": "^0.16.45",
+    "react-addons-test-utils": "^15.3.1",
+    "sinon": "^1.17.5",
     "webpack": "^1.13.1"
+  },
+  "ava": {
+    "babel": {
+      "presets": [
+        "es2015",
+        "stage-2",
+        "react"
+      ]
+    },
+    "source": [
+       "!src/**/*",
+       "!js/**/*",
+       "!jspm_packages/**/*",
+       "!lib/**/*",
+       "!local_modules/**/*",
+       "!node_modules/**/*", 
+       "test/**/*" 
+    ]
   }
 }
