--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "jspm": {
     "dependencies": {
+      "browser-filesaver": "npm:browser-filesaver@^1.1.1",
       "chart.js": "npm:chart.js@^2.2.2",
       "classnames": "npm:classnames@^2.2.5",
       "interact.js": "npm:interact.js@^1.2.6",
+      "jszip": "npm:jszip@^3.1.3",
       "localforage": "npm:localforage@^1.4.2",
       "raven-js": "npm:raven-js@^3.7.0",
       "react": "npm:react@^15.3.2",
