--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
       "chart.js": "npm:chart.js@^2.2.2",
       "classnames": "npm:classnames@^2.2.5",
       "interact.js": "npm:interact.js@^1.2.6",
-      "jszip": "npm:jszip@^3.1.3",
       "localforage": "npm:localforage@^1.4.2",
+      "lodash.merge": "npm:lodash.merge@^4.6.0",
       "raven-js": "npm:raven-js@^3.7.0",
       "react": "npm:react@^15.3.2",
       "react-dom": "npm:react-dom@^15.3.2",
@@ -41,12 +41,17 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-2": "^6.11.0",
+    "del": "^2.2.2",
     "enzyme": "^2.4.1",
     "eslint": "^2.13.1",
     "eslint-plugin-react": "^5.2.2",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.0.12",
     "gulp-concat": "^2.6.0",
+    "gulp-inject": "^4.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
+    "gulp-rev": "^7.1.2",
     "html-webpack-plugin": "^2.21.0",
     "jspm": "^0.16.45",
     "react-addons-test-utils": "^15.3.2",
