--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Library Watch is a RESTFul client. With it you can view information about libraries, repositories from GitHub, NPM api services.",
   "main": "index.js",
   "scripts": {
-    "test": "ava test/**/*.test.js --verbose",
+    "test": "ava src/**/__tests__/**/*.test.js --verbose",
     "test:watch": "npm run test -- --watch",
     "bundle": "jspm bundle js/**/* - [js/**/*] dependency-bundle.js",
     "build": "webpack --colors --progress",
@@ -34,16 +34,16 @@
     "devDependencies": {}
   },
   "devDependencies": {
-    "ava": "^0.16.0",
+    "ava": "^0.17.0",
     "babel-core": "^6.10.4",
-    "babel-eslint": "^6.1.2",
+    "babel-eslint": "^7.1.1",
     "babel-plugin-recharts": "^1.0.2",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-2": "^6.11.0",
     "del": "^2.2.2",
-    "enzyme": "^2.4.1",
-    "eslint": "^2.13.1",
+    "enzyme": "^2.6.0",
+    "eslint": "^3.11.1",
     "eslint-plugin-react": "^5.2.2",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.0.12",
@@ -66,14 +66,8 @@
         "react"
       ]
     },
-    "source": [
-      "!src/**/*",
-      "!js/**/*",
-      "!jspm_packages/**/*",
-      "!lib/**/*",
-      "!local_modules/**/*",
-      "!node_modules/**/*",
-      "test/**/*"
-    ]
+    "files": [
+      "src/**/__tests__/**/*.test.js"
+    ]    
   }
 }
