--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,15 @@
  {
-    "only" : [
+    "ignore" : [
+       "**/__tests__/*"
+     ],
+    "only" : [                
                 "*.js",
                 "*.jsx",
                 "*.es6"
-             ],    
+     ],    
     "presets" : [
                    "es2015",
                    "react",
                    "stage-2" 
-                ]
+     ]
  }
