--- a/.babelrc
+++ b/.babelrc
@@ -7,6 +7,12 @@
                 "*.jsx",
                 "*.es6"
      ],    
+    "plugins" : [
+      [ "transform-react-remove-prop-types", {
+         "mode": "wrap",
+         "ignoreFilenames":["node_modules"]    
+      }]
+    ], 
     "presets" : [
                    "es2015",
                    "react",
