--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "bundle": "jspm bundle js/**/*  - [js/**/*] dependency-bundle.js",
     "build": "webpack --colors --progress",
     "gulp": "gulp",
-    "start": "http-server -p8080"
+    "start:emmiter": "chokidar-socket-emitter",
+    "start:web": "http-server -c-1 -p7070"
   },
   "author": "ZhnZhn",
   "license": "MIT",
@@ -28,13 +29,15 @@
       "interact.js": "npm:interact.js@^1.2.6",
       "localforage": "npm:localforage@^1.4.3",
       "lodash.merge": "npm:lodash.merge@^4.6.0",
-      "raven-js": "npm:raven-js@^3.9.2",
+      "raven-js": "npm:raven-js@^3.12.0",
       "react": "npm:react@^15.4.2",
       "react-dom": "npm:react-dom@^15.4.2",
       "reflux": "npm:reflux@^5.0.3",
       "timeago.js": "npm:timeago.js@^2.0.4"
     },
-    "devDependencies": {}
+    "devDependencies": {
+      "systemjs-hot-reloader": "npm:systemjs-hot-reloader@^1.1.0"
+    }
   },
   "devDependencies": {
     "ava": "^0.17.0",
@@ -42,9 +45,11 @@
     "babel-core": "^6.18.2",
     "babel-eslint": "^7.1.1",
     "babel-plugin-recharts": "^1.0.2",
+    "babel-plugin-transform-react-remove-prop-types": "^0.3.2",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-2": "^6.18.0",
+    "chokidar-socket-emitter": "^0.6.0",
     "del": "^2.2.2",
     "enzyme": "^2.6.0",
     "eslint": "^3.11.1",
