Add propTypes to zhnAtom's components

--- a/.babelrc
+++ b/.babelrc
@@ -6,16 +6,22 @@
                 "*.js",
                 "*.jsx",
                 "*.es6"
+     ],
+     "presets" : [
+                   "es2015",
+                   "react",
+                   "stage-2" 
      ],    
     "plugins" : [
       [ "transform-react-remove-prop-types", {
          "mode": "wrap",
          "ignoreFilenames":["node_modules"]    
+      }],
+      [ "transform-runtime", {
+         "helpers": true,
+         "polyfill": false,
+         "regenerator": false,
+         "moduleName": "babel-runtime" 
       }]
-    ], 
-    "presets" : [
-                   "es2015",
-                   "react",
-                   "stage-2" 
-     ]
+    ]
  }
