--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "jspm": {
     "dependencies": {
+      "babel-runtime": "npm:babel-runtime@^6.23.0",
       "browser-filesaver": "npm:browser-filesaver@^1.1.1",
       "chart.js": "npm:chart.js@^2.4.0",
       "classnames": "npm:classnames@^2.2.5",
@@ -46,6 +47,7 @@
     "babel-eslint": "^7.1.1",
     "babel-plugin-recharts": "^1.0.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.3.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-2": "^6.18.0",
@@ -80,6 +82,7 @@
     ]
   },
   "dependencies": {
+    "babel-runtime": "^6.23.0",
     "raven-js": "^3.9.2"
   }
 }
