--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "ava": "^0.17.0",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.2",
-    "babel-eslint": "^7.1.1",
-    "babel-plugin-recharts": "^1.0.2",
+    "babel-eslint": "^7.1.1",    
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-remove-prop-types": "^0.3.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.18.0",
