--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test:watch": "npm run test -- --watch",
     "test:one": "ava src/**/__tests__/**/*.test.js --verbose --watch --source='menubadge*'",
     "transpile": "babel ./src --out-dir ./js --source-maps --ignore test.js",
-    "bundle": "jspm bundle js/**/*  - [js/**/*] dependency-bundle.js",
+    "bundle": "jspm bundle js/**/* - [js/**/*] dependency-bundle.js",
     "build": "webpack --colors --progress",
     "gulp": "gulp",
     "start:emitter": "chokidar-socket-emitter",
@@ -28,12 +28,12 @@
       "chart.js": "npm:chart.js@^2.4.0",
       "classnames": "npm:classnames@^2.2.5",
       "interact.js": "npm:interact.js@^1.2.6",
-      "localforage": "npm:localforage@^1.4.3",
+      "localforage": "npm:localforage@^1.5.0",
       "lodash.merge": "npm:lodash.merge@^4.6.0",
       "raven-js": "npm:raven-js@^3.12.0",
       "react": "npm:react@^15.4.2",
       "react-dom": "npm:react-dom@^15.4.2",
-      "reflux": "npm:reflux@^5.0.3",
+      "reflux": "npm:reflux@5.0.4",
       "timeago.js": "npm:timeago.js@^2.0.4"
     },
     "devDependencies": {
@@ -44,7 +44,7 @@
     "ava": "^0.17.0",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.2",
-    "babel-eslint": "^7.1.1",    
+    "babel-eslint": "^7.1.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-remove-prop-types": "^0.3.2",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -83,6 +83,8 @@
   },
   "dependencies": {
     "babel-runtime": "^6.23.0",
-    "raven-js": "^3.9.2"
+    "localforage": "^1.5.0",
+    "raven-js": "^3.9.2",
+    "reflux": "^5.0.4"
   }
 }
