Replace buttons, update colors

--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
   "description": "Library Watch is a RESTFul client. With it you can view information about libraries, repositories from GitHub, NPM api services.",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint ./src/*.js*",
+    "lint": "eslint -c .eslintrc-build.json ./src > lint.txt",
     "test": "ava src/**/__tests__/**/*.test.js --verbose",
     "test:watch": "npm run test -- --watch",
     "test:one": "ava src/**/__tests__/**/*.test.js --verbose --watch --source='menubadge*'",
     "transpile": "babel ./src --out-dir ./js --source-maps --ignore test.js",
     "bundle": "jspm bundle js/**/* - [js/**/*] dependency-bundle.js",
-    "lint": "eslint -c .eslintrc-build.json ./src > lint.txt",
     "build": "webpack --colors --progress",
     "build:dll": "webpack --colors --progress --config webpack.dll.js",
     "build:dll-jsx": "webpack --colors --progress --config webpack.dll-jsx.js",
-    "gulp": "gulp",
+    "build:css": "gulp",
     "start:emitter": "chokidar-socket-emitter",
     "start:web": "http-server -c-1 -p8080"
   },
@@ -59,18 +58,18 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "chokidar-socket-emitter": "^0.6.0",
-    "del": "^2.2.2",
+    "del": "^3.0.0",
     "enzyme": "^3.8.0",
     "eslint": "^5.12.1",
     "eslint-plugin-jsx-a11y": "^6.2.0",
     "eslint-plugin-react": "^7.12.4",
-    "gulp": "^3.9.1",
-    "gulp-clean-css": "^2.0.12",
-    "gulp-concat": "^2.6.0",
-    "gulp-inject": "^4.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-replace": "^0.5.4",
-    "gulp-rev": "^7.1.2",
+    "gulp": "^4.0.0",
+    "gulp-clean-css": "^4.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-inject": "^5.0.2",
+    "gulp-rename": "^1.4.0",
+    "gulp-replace": "^1.0.0",
+    "gulp-rev": "^9.0.0",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-processing-plugin": "^0.1.2",
     "jspm": "^0.16.53",
