--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
       "create-react-class": "npm:create-react-class@^15.6.3",
       "interactjs": "npm:interactjs@^1.3.4",
       "localforage": "npm:localforage@1.5.7",
-      "lodash.merge": "npm:lodash.merge@^4.6.1",
+      "lodash.merge": "npm:lodash.merge@^4.6.2",
       "prop-types": "npm:prop-types@^15.7.2",
       "raven-js": "npm:raven-js@3.27.0",
       "react": "npm:react@^16.8.6",
@@ -46,6 +46,7 @@
     }
   },
   "devDependencies": {
+    "ava": "file:node_modules_b7/node_modules/ava",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
@@ -85,7 +86,7 @@
     "create-react-class": "^15.6.3",
     "interactjs": "^1.3.4",
     "localforage": "^1.5.7",
-    "lodash.merge": "^4.6.1",
+    "lodash.merge": "^4.6.2",
     "raven-js": "^3.27.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
