--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "build": "webpack --colors --progress",
     "build:dll": "webpack --colors --progress --config webpack.dll.js",
     "build:dll-jsx": "webpack --colors --progress --config webpack.dll-jsx.js",
-    "build:css": "gulp",
-    "start:emitter": "chokidar-socket-emitter",
-    "start:web": "http-server -c-1 -p8080"
+    "build:css": "gulp"
   },
   "author": "Yevhenii Molodyi",
   "license": "MIT",
@@ -42,15 +40,13 @@
       "reflux": "npm:reflux@5.0.4",
       "timeago.js": "npm:timeago.js@2.0.5"
     },
-    "devDependencies": {
-      "systemjs-hot-reloader": "npm:systemjs-hot-reloader@^1.1.0"
-    }
+    "devDependencies": {}
   },
   "devDependencies": {
     "ava": "file:node_modules_b7/node_modules/ava",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.23",
@@ -59,24 +55,23 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "^6.26.0",
-    "chokidar-socket-emitter": "^0.6.0",
-    "del": "^3.0.0",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.12.1",
-    "eslint": "^5.12.1",
-    "eslint-plugin-jsx-a11y": "^6.2.0",
-    "eslint-plugin-react": "^7.12.4",
-    "gulp": "^4.0.0",
-    "gulp-clean-css": "^4.0.0",
+    "del": "^5.1.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "eslint": "^6.6.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0",
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.2.0",
     "gulp-concat": "^2.6.1",
-    "gulp-inject": "^5.0.2",
+    "gulp-inject": "^5.0.4",
     "gulp-rename": "^1.4.0",
     "gulp-replace": "^1.0.0",
     "gulp-rev": "^9.0.0",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-processing-plugin": "^0.1.2",
     "jsdom": "^14.0.0",
-    "jspm": "^0.16.54",
+    "jspm": "^0.16.55",
     "sinon": "^1.17.5",
     "webpack": "^3.12.0"
   },
