--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "transpile": "babel ./src --out-dir ./js --source-maps --ignore ./**/__tests__",
     "transpile:all": "babel ./src --out-dir ./js --source-maps",
     "bundle": "jspm bundle js/**/* - [js/**/*] dependency-bundle.js",
+    "build:dev:dll": "webpack --colors --progress --config webpack.dev.dll.js",
+    "build:dev:dll-jsx": "webpack --colors --progress --config webpack.dev.dll-jsx.js",
     "build:dll": "webpack --colors --progress --config webpack.dll.js",
     "build:dll-jsx": "webpack --colors --progress --config webpack.dll-jsx.js",
     "build:css": "gulp",
@@ -23,7 +25,7 @@
     "dependencies": {
       "@babel/runtime": "npm:@babel/runtime@^7.7.6",
       "browser-filesaver": "npm:browser-filesaver@^1.1.1",
-      "chart.js": "npm:chart.js@^2.8.0",
+      "chart.js": "npm:chart.js@^2.9.3",
       "classnames": "npm:classnames@^2.2.6",
       "create-react-class": "npm:create-react-class@^15.6.3",
       "interactjs": "npm:interactjs@^1.3.4",
@@ -32,8 +34,8 @@
       "papaparse": "npm:papaparse@^5.0.2",
       "prop-types": "npm:prop-types@^15.7.2",
       "raven-js": "npm:raven-js@3.27.0",
-      "react": "npm:react@^16.9.0",
-      "react-dom": "npm:react-dom@^16.9.0",
+      "react": "npm:react@^16.12.0",
+      "react-dom": "npm:react-dom@^16.12.0",
       "reflux": "npm:reflux@5.0.4",
       "timeago.js": "npm:timeago.js@2.0.5"
     },
@@ -69,7 +71,7 @@
   "dependencies": {
     "@babel/runtime": "^7.7.6",
     "browser-filesaver": "^1.1.1",
-    "chart.js": "^2.8.0",
+    "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
     "create-react-class": "^15.6.3",
     "interactjs": "^1.3.4",
@@ -77,8 +79,8 @@
     "lodash.merge": "^4.6.2",
     "papaparse": "^5.0.2",
     "raven-js": "^3.27.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "reflux": "^5.0.4",
     "timeago.js": "^2.0.5"
   }
