--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "transpile": "babel ./src --out-dir ./js --source-maps --ignore ./**/__tests__",
     "transpile:all": "babel ./src --out-dir ./js --source-maps",
     "bundle": "jspm bundle js/**/* - [js/**/*] dependency-bundle.js",
+    "css:min": "gulp",
     "build:dev:dll": "webpack --colors --progress --config webpack.dev.dll.js",
     "build:dev:dll-jsx": "webpack --colors --progress --config webpack.dev.dll-jsx.js",
     "build:dll": "webpack --colors --progress --config webpack.dll.js",
     "build:dll-jsx": "webpack --colors --progress --config webpack.dll-jsx.js",
-    "build:css": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Yevhenii Molodyi",
