--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "jspm": {
     "dependencies": {
-      "@babel/runtime": "npm:@babel/runtime@^7.7.6",
+      "@babel/runtime": "npm:@babel/runtime@^7.8.4",
       "browser-filesaver": "npm:browser-filesaver@^1.1.1",
       "chart.js": "npm:chart.js@^2.9.3",
       "classnames": "npm:classnames@^2.2.6",
@@ -36,19 +36,19 @@
       "raven-js": "npm:raven-js@3.27.0",
       "react": "npm:react@^16.12.0",
       "react-dom": "npm:react-dom@^16.12.0",
-      "reflux": "npm:reflux@5.0.4",
+      "reflux-core": "npm:reflux-core@^1.0.0",
       "timeago.js": "npm:timeago.js@2.0.5"
     },
     "devDependencies": {}
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.5",
-    "@babel/core": "^7.7.5",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/plugin-proposal-decorators": "^7.7.4",
-    "@babel/plugin-transform-runtime": "^7.7.6",
-    "@babel/preset-env": "^7.7.6",
-    "@babel/preset-react": "^7.7.4",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.6",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.6",
+    "@babel/preset-react": "^7.8.3",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "del": "^5.1.0",
@@ -69,7 +69,7 @@
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
-    "@babel/runtime": "^7.7.6",
+    "@babel/runtime": "^7.8.4",
     "browser-filesaver": "^1.1.1",
     "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
@@ -81,7 +81,7 @@
     "raven-js": "^3.27.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "reflux": "^5.0.4",
+    "reflux-core": "^1.0.0",
     "timeago.js": "^2.0.5"
   }
 }
