--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Web app Library Watch gives the ability to view information about GitHub's repositories, NPM's packages, StackOverflows's questions.",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint -c .eslintrc.js ./src > lint.txt",
     "lint:build": "eslint -c .eslintrc-build.js ./src > lint-build.txt",
     "transpile": "babel ./src --out-dir ./js --source-maps --ignore ./**/__tests__",
     "transpile:all": "babel ./src --out-dir ./js --source-maps",
@@ -51,10 +52,10 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "del": "^5.1.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.8",
+    "eslint": "^7.7.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.0",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.2.0",
     "gulp-concat": "^2.6.1",
