--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Web app Library Watch gives the ability to view information about GitHub's repositories, NPM's packages, StackOverflows's questions.",
   "main": "index.js",
   "scripts": {
+    "dev": "webpack-dev-server --config webpack.dev.js",
     "lint": "eslint -c .eslintrc.js ./src > lint.txt",
     "lint:build": "eslint -c .eslintrc-build.js ./src > lint-build.txt",
     "transpile": "babel ./src --out-dir ./js --source-maps --ignore ./**/__tests__",
@@ -23,32 +24,31 @@
     "url": "https://github.com/ZhnZhn/library-watch.git"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.1",
-    "@babel/core": "^7.10.2",
-    "@babel/plugin-proposal-class-properties": "^7.10.1",
-    "@babel/plugin-proposal-decorators": "^7.10.1",
-    "@babel/plugin-transform-runtime": "^7.10.1",
-    "@babel/preset-env": "^7.10.2",
-    "@babel/preset-react": "^7.10.1",
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-decorators": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.5",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.0.6",
-    "del": "^5.1.0",
-    "eslint": "^7.7.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.1.0",
+    "babel-loader": "^8.1.0",
+    "del": "^6.0.0",
+    "eslint": "^7.12.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "gulp": "^4.0.2",
-    "gulp-clean-css": "^4.2.0",
+    "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
-    "gulp-inject": "^5.0.4",
-    "gulp-rename": "^1.4.0",
+    "gulp-inject": "^5.0.5",
+    "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.0.0",
     "gulp-rev": "^9.0.0",
     "html-webpack-plugin": "^4.5.0",
-    "jspm": "^0.16.55",
-    "terser-webpack-plugin": "^3.0.3",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "terser-webpack-plugin": "^5.0.3",
+    "webpack": "^5.4.0",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "@babel/runtime": "^7.12.5",
