--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "del": "^6.0.0",
@@ -46,9 +47,11 @@
     "gulp-replace": "^1.0.0",
     "gulp-rev": "^9.0.0",
     "html-webpack-plugin": "^4.5.0",
+    "react-refresh": "^0.9.0",
     "terser-webpack-plugin": "^5.0.3",
     "webpack": "^5.4.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.12.5",
