--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "Web app Library Watch gives the ability to view information about GitHub's repositories, NPM's packages, StackOverflows's questions.",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --config webpack.dev.js",
+    "dev": "webpack serve --config webpack.dev.js",
     "lint": "eslint -c .eslintrc.js ./src > lint.txt",
     "lint:build": "eslint -c .eslintrc-build.js ./src > lint-build.txt",
     "transpile": "babel ./src --out-dir ./js --source-maps --ignore ./**/__tests__",
     "transpile:all": "babel ./src --out-dir ./js --source-maps",
     "bundle": "jspm bundle js/**/* - [js/**/*] dependency-bundle.js",
     "css:min": "gulp",
-    "build:dev:dll": "webpack --colors --progress --config webpack.dev.dll.js",
-    "build:dev:dll-jsx": "webpack --colors --progress --config webpack.dev.dll-jsx.js",
-    "build:dll": "webpack --colors --progress --config webpack.dll.js",
-    "build:dll-jsx": "webpack --colors --progress --config webpack.dll-jsx.js",
+    "build:dev:dll": "webpack --color --progress --config webpack.dev.dll.js",
+    "build:dev:dll-jsx": "webpack --color --progress --config webpack.dev.dll-jsx.js",
+    "build:dll": "webpack --color --progress --config webpack.dll.js",
+    "build:dll-jsx": "webpack --color --progress --config webpack.dll-jsx.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Yevhenii Molodyi",
@@ -48,10 +48,10 @@
     "gulp-rev": "^9.0.0",
     "html-webpack-plugin": "^4.5.0",
     "react-refresh": "^0.9.0",
-    "terser-webpack-plugin": "^5.0.3",
-    "webpack": "^5.4.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "terser-webpack-plugin": "^5.1.1",
+    "webpack": "^5.19.0",
+    "webpack-cli": "^4.4.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "@babel/runtime": "^7.12.5",
