--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "build:dev:dll-jsx": "webpack --color --progress --config webpack.dev.dll-jsx.js",
     "build:dll": "webpack --color --progress --config webpack.dll.js",
     "build:dll-jsx": "webpack --color --progress --config webpack.dll-jsx.js",
+    "build:prod": "webpack --color --progress --config webpack.prod.js",
+    "stats": "npm run stats:json && npm run stats:report",
+    "stats:json": "webpack --config webpack.test.js --profile --json > stats.json",
+    "stats:report": "webpack-bundle-analyzer stats.json --no-open --mode static",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Yevhenii Molodyi",
@@ -24,44 +28,45 @@
     "url": "https://github.com/ZhnZhn/library-watch.git"
   },
   "devDependencies": {
-    "@babel/cli": "^7.13.14",
-    "@babel/core": "^7.13.15",
-    "@babel/eslint-parser": "^7.14.3",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/plugin-proposal-decorators": "^7.13.15",
-    "@babel/plugin-transform-runtime": "^7.13.15",
-    "@babel/preset-env": "^7.13.15",
-    "@babel/preset-react": "^7.13.13",
+    "@babel/cli": "^7.14.8",
+    "@babel/core": "^7.15.0",
+    "@babel/eslint-parser": "^7.15.0",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-decorators": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-react": "^7.14.5",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.2",
     "del": "^6.0.0",
-    "eslint": "^7.26.0",
+    "eslint": "^7.32.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-inject": "^5.0.5",
     "gulp-rename": "^2.0.0",
-    "gulp-replace": "^1.0.0",
+    "gulp-replace": "^1.1.3",
     "gulp-rev": "^9.0.0",
-    "html-webpack-plugin": "^5.3.1",
-    "react-refresh": "^0.9.0",
-    "terser-webpack-plugin": "^5.1.1",
-    "webpack": "^5.28.0",
-    "webpack-cli": "^4.6.0",
+    "html-webpack-plugin": "^5.3.2",
+    "react-refresh": "^0.10.0",
+    "terser-webpack-plugin": "^5.1.4",
+    "webpack": "^5.49.0",
+    "webpack-bundle-analyzer": "^4.4.2",
+    "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "@babel/runtime": "^7.13.10",
+    "@babel/runtime": "^7.14.8",
     "browser-filesaver": "^1.1.1",
-    "chart.js": "^2.9.4",
+    "chart.js": "^3.5.0",
     "clsx": "^1.1.1",
     "interactjs": "^1.3.4",
     "localforage": "^1.5.7",
     "lodash.merge": "^4.6.2",
-    "papaparse": "^5.2.0",
+    "papaparse": "^5.3.1",
     "raven-js": "^3.27.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
