--- a/package.json
+++ b/package.json
@@ -9,12 +9,7 @@
     "lint:build": "eslint -c .eslintrc-build.js ./src > lint-build.txt",
     "transpile": "babel ./src --out-dir ./js --source-maps --ignore ./**/__tests__",
     "transpile:all": "babel ./src --out-dir ./js --source-maps",
-    "bundle": "jspm bundle js/**/* - [js/**/*] dependency-bundle.js",
-    "css:min": "gulp",
-    "build:dev:dll": "webpack --color --progress --config webpack.dev.dll.js",
-    "build:dev:dll-jsx": "webpack --color --progress --config webpack.dev.dll-jsx.js",
-    "build:dll": "webpack --color --progress --config webpack.dll.js",
-    "build:dll-jsx": "webpack --color --progress --config webpack.dll-jsx.js",
+    "css:min": "node min-css.js",
     "build:prod": "webpack --color --progress --config webpack.prod.js",
     "stats": "npm run stats:json && npm run stats:report",
     "stats:json": "webpack --config webpack.test.js --profile --json > stats.json",
@@ -38,16 +33,12 @@
     "@babel/preset-react": "^7.16.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "babel-loader": "^8.2.3",
+    "clean-css": "^4.2.3",
     "del": "^6.0.0",
     "eslint": "^8.8.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "gulp": "^4.0.2",
-    "gulp-clean-css": "^4.3.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-rename": "^2.0.0",
-    "gulp-replace": "^1.1.3",
     "gulp-rev": "^9.0.0",
     "html-webpack-plugin": "^5.5.0",
     "terser-webpack-plugin": "^5.3.0",
