--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "stats": "npm run stats:json && npm run stats:report",
     "stats:json": "webpack --config webpack.test.js --profile --json > stats.json",
     "stats:report": "webpack-bundle-analyzer stats.json --no-open --mode static",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "author": "Yevhenii Molodyi",
   "license": "MIT",
@@ -32,6 +34,7 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "babel-jest": "^29.3.1",
     "babel-loader": "^9.1.2",
     "clean-css": "^5.3.1",
     "eslint": "^7.32.0",
@@ -39,6 +42,7 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.3.1",
     "terser-webpack-plugin": "^5.3.6",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
@@ -53,5 +57,13 @@
     "react-dom": "^18.2.0",
     "reflux-core": "^1.0.0",
     "timeago.js": "^4.0.2"
+  },
+  "jest": {   
+    "roots": [      
+      "<rootDir>/js/utils/"
+    ],
+    "transformIgnorePatterns": [      
+      "<rootDir>/js/utils/"      
+    ]
   }
 }
