--- a/package.json
+++ b/package.json
@@ -40,22 +40,22 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "html-webpack-plugin": "^5.5.0",
     "jest": "^29.5.0",
     "terser-webpack-plugin": "^5.3.7",
-    "webpack": "^5.77.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.13.2"
+    "webpack": "^5.77.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.21.0",
     "chart.js": "^4.2.1",
+    "html-webpack-plugin": "^5.5.1",
     "papaparse": "^5.4.1",
     "raven-js": "^3.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reflux-core": "^1.0.0",
-    "timeago.js": "^4.0.2"
+    "timeago.js": "^4.0.2",
+    "webpack-cli": "^5.0.2",
+    "webpack-dev-server": "^4.13.3"
   },
   "jest": {
     "roots": [
