--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "url": "https://github.com/ZhnZhn/library-watch.git"
   },
   "devDependencies": {
-    "@babel/cli": "^7.21.0",
-    "@babel/core": "^7.21.4",
-    "@babel/eslint-parser": "^7.21.3",
+    "@babel/cli": "^7.22.5",
+    "@babel/core": "^7.22.5",
+    "@babel/eslint-parser": "^7.22.5",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-transform-runtime": "^7.21.4",
-    "@babel/preset-env": "^7.21.4",
-    "@babel/preset-react": "^7.18.6",
+    "@babel/plugin-transform-runtime": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-react": "^7.22.5",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "babel-jest": "^29.5.0",
     "babel-loader": "^9.1.2",
@@ -41,11 +41,13 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.5.0",
-    "terser-webpack-plugin": "^5.3.7",
-    "webpack": "^5.77.0"
+    "terser-webpack-plugin": "^5.3.9",
+    "webpack": "^5.86.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.21.0",
+    "@babel/runtime": "^7.22.5",
     "chart.js": "^4.2.1",
     "html-webpack-plugin": "^5.5.1",
     "papaparse": "^5.4.1",
@@ -53,9 +55,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reflux-core": "^1.0.0",
-    "timeago.js": "^4.0.2",
-    "webpack-cli": "^5.0.2",
-    "webpack-dev-server": "^4.13.3"
+    "timeago.js": "^4.0.2"
   },
   "jest": {
     "roots": [
