--- a/package.json
+++ b/package.json
@@ -24,38 +24,41 @@
     "type": "git",
     "url": "https://github.com/ZhnZhn/library-watch.git"
   },
-  "devDependencies": {
-    "@babel/cli": "^7.22.5",
-    "@babel/core": "^7.22.5",
-    "@babel/eslint-parser": "^7.22.5",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-transform-runtime": "^7.22.5",
-    "@babel/preset-env": "^7.22.5",
-    "@babel/preset-react": "^7.22.5",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
-    "babel-jest": "^29.5.0",
-    "babel-loader": "^9.1.2",
-    "clean-css": "^5.3.2",
-    "eslint": "^7.32.0",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^29.5.0",
-    "terser-webpack-plugin": "^5.3.9",
-    "webpack": "^5.86.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.0"
-  },
   "dependencies": {
-    "@babel/runtime": "^7.22.5",
+    "@babel/runtime": "^7.22.6",
     "chart.js": "^4.2.1",
-    "html-webpack-plugin": "^5.5.1",
     "papaparse": "^5.4.1",
     "raven-js": "^3.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reflux-core": "^1.0.0",
     "timeago.js": "^4.0.2"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.22.6",
+    "@babel/core": "^7.22.8",
+    "@babel/eslint-parser": "^7.22.7",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-transform-runtime": "^7.22.7",
+    "@babel/preset-env": "^7.22.7",
+    "@babel/preset-react": "^7.22.5",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "babel-jest": "^29.6.1",
+    "babel-loader": "^9.1.2",
+    "clean-css": "^5.3.2",
+    "eslint": "^7.32.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "html-webpack-plugin": "^5.5.3",
+    "jest": "^29.6.1",
+    "terser-webpack-plugin": "^5.3.9",
+    "webpack": "^5.88.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
+  },
+  "overrides": {
+    "semver": "~7.5.3"
   },
   "jest": {
     "roots": [
