Add flux zustand-lite

--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "raven-js": "^3.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "timeago.js": "^4.0.2",
-    "zustand": "^4.4.1"
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.0",
