Add unit test suite storeApi.test

--- a/package.json
+++ b/package.json
@@ -59,9 +59,11 @@
   },
   "jest": {
     "roots": [
+      "<rootDir>/js/flux/",
       "<rootDir>/js/utils/"
     ],
     "transformIgnorePatterns": [
+      "<rootDir>/js/flux/",
       "<rootDir>/js/utils/"
     ]
   }
