--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "url": "https://github.com/ZhnZhn/library-watch.git"
   },
   "dependencies": {
+    "@babel/runtime": "^7.23.9",
     "chart.js": "^4.4.1",
     "papaparse": "^5.4.1",
     "raven-js": "^3.27.2",
@@ -53,9 +54,6 @@
     "webpack": "^5.90.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
-  },
-  "overrides": {
-    "semver": "~7.5.3"
   },
   "jest": {
     "roots": [
