--- a/package.json
+++ b/package.json
@@ -29,9 +29,8 @@
     "chart.js": "^4.4.2",
     "papaparse": "^5.4.1",
     "raven-js": "^3.27.2",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
-    "timeago.js": "^4.0.2"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.1",
