--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "chart.js": "^4.4.7",
     "papaparse": "^5.4.1",
     "raven-js": "^3.27.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.25.9",
@@ -43,6 +43,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.2.1",
+    "bundle-stats-webpack-plugin": "^4.16.0",
     "clean-css": "^5.3.3",
     "eslint": "^7.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
